--- a/src/app/home/home-page.component.html
+++ b/src/app/home/home-page.component.html
@@ -17,8 +17,17 @@
     <div class="row justify-content-center align-items-center min-vh-100">
         <div class="row justify-content-center text-center" id="gameTitle" >
             <div class="col-5 align-self-center text-center">
+                <!-- <p style="font-size: 1.8rem;"> The Early Church Game</p> -->
+                <h1> 抉择</h1>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-5 align-self-center text-center">
                     <!-- <p style="font-size: 1.8rem;"> The Early Church Game</p> -->
-                    <h1> 抉择 The Early Church <i class="fa-solid fa-church"></i></h1>
+                    <h1> The Early Church</h1>
+            </div>
+            <div class="w-100"></div>
+            <div class="col-5 align-self-center text-center">
+                <h1> <i class="fa-solid fa-church"></i></h1>
             </div>
             <div class="w-100"></div>
             <div class="col-10 align-self-center" >
@@ -37,7 +46,7 @@
 
 <app-copyright></app-copyright>
 
-<div class="modal fade" id="joinARoom" tabindex="-1" aria-labelledby="joinARoomModal" aria-hidden="true">
+<div class="modal fade" id="joinARoom" tabindex="-1" aria-labelledby="joinARoomModal" aria-hidden="true" >
     <app-join-a-room></app-join-a-room>
 </div>
 
