--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,9 +1,12 @@
 <div class="container">
     <nav class="navbar rounded shadow fixed-top" style="background-color: #b3d6ef;">
         <div class="container-fluid">
-            <a class="navbar-brand" routerLink="/">
-                <i class="fa-solid fa-cross"></i> Face2Face Home Church 
-            </a>
+            <div>
+                <a class="navbar-brand" routerLink="/">
+                    <i class="fa-solid fa-cross"></i> Face2Face Home Church 
+                </a>
+            </div>
+            
         </div>
     </nav>
 </div>
