--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -1,20 +1,29 @@
 <div class="container">
     <nav class="navbar rounded shadow fixed-top" style="background-color: #b3d6ef;">
-        <div class="container justify-content-center text-center d-flex justify-content-between">
-            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#backToMenu">
-                <i class="fa-solid fa-backward"></i>
-            </button>
-            <h5>{{groupName}}</h5>
-            <div></div>
+        <div class="container  text-center d-flex justify-content-between">
+            <div>
+                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#backToMenu">
+                    <i class="fa-solid fa-backward"></i>
+                </button>
+            </div>
+            
+            <div>
+                <h4>{{groupName}} <i class="fa-solid fa-people-group"></i></h4>
+            </div>
+            <div>
+                <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#info"> 
+                    <i class="fa-regular fa-circle-question"></i> 
+                </button>
+            </div>
         </div>
     </nav>
 </div>
 <div class="container-fluid d-flex pt-5">
-    <div class="row flex-fill pt-2">
+    <div class="row flex-fill pt-2 justify-content-between" >
             <div class="col justify-content-center text-center pt-2">
                 <div class="dropdown-center">
                     <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Massage and History 
+                        Massages 
                         <i class="fa-regular fa-comments"></i>
                     </button>
                     <div class="dropdown-menu" style="max-height: 85vh; max-width: 58vh;">
@@ -36,33 +45,25 @@
                     </div>
                 </div>
             </div>
+            <div *ngIf="groupName == groupLeader.groupName && 
+                name == groupLeader.name" class="col pt-2 d-flex flex-row-reverse" >
+                <button class="btn btn-warning" (click)="gameStart()">
+                    Start The Game! <i class="fa-solid fa-circle-play"></i>
+                </button>
+            </div>
             <div class="w-100"></div>
             <div class="col pt-2">
                 <div class="list-group">
-                    <!-- <div *ngFor="let user of onlineUser; index as i;">
-                        <div class="list-group-item list-group-item-success">
-                            <div class="d-flex w-100">
-                                <h5 class="flex-grow-1">   
-                                    <span class="badge rounded-pill bg-danger">{{i + 1}}</span>
-                                        {{user.name}}
-                                    <span class="badge rounded-pill bg-primary" id="inGame">In Game</span> 
-                                    <span class="badge rounded-pill bg-danger" id="outGame">Out Game</span> 
-                                    <span class="badge rounded-pill bg-secondary" id="userId">
-                                        {{user.userId}}
-                                    </span> 
-                                </h5>
-                                <button type="button" class="btn btn-primary" id="vote">Vote</button>
-                                <button type="button" class="btn btn-danger" id="exile">Exile</button>
-                                <button type="button" class="btn btn-warning" id="check">Check</button>
-                                <button type="button" class="btn btn-info" id="fire">Fire</button>
-                            </div>
-                        </div>
-                    </div> -->
                     <div *ngFor="let user of onlineUser; index as i;">
                         <div class="list-group-item list-group-item-success">
                             <div class="row">
                                 <div class="col">
                                     <div class="d-flex align-items-center">
+                                        <div *ngIf="groupName == groupLeader.groupName && 
+                                            user.name == groupLeader.name" class="p-2">
+                                            <i class="fa-solid fa-star" style="color: #b3b611;"></i>
+                                        </div>
+                                            
                                             <span class="badge bg-danger d-flex justify-content-center align-items-center">
                                                 <div>{{i + 1}}</div>
                                             </span>
@@ -101,7 +102,6 @@
         <div class="modal-content">
             <div class="modal-header">
                 <p class="modal-title fs-6">Back to Home</p>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body text-center">
                 <p class="badge bg-danger text-wrap fw-bold fs-3">
@@ -111,9 +111,29 @@
                     You cannot continue to play once you quit.
                 </p>
             </div>
-            <div class="modal-footer justify-content-center text-center d-flex justify-content-between">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="userLeavesGroup()">Yes</button>
+            <div class="modal-footer text-center d-flex justify-content-between">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No <i class="fa-solid fa-xmark"></i></button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="userLeavesGroup()">Yes <i class="fa-solid fa-right-from-bracket"></i></button>
+            </div>
+        </div>
+        
+    </div>
+        
+</div>
+
+<div class="modal fade" id="info" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="info" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">You Identity</h5>
+            </div>
+            <div class="modal-body text-center">
+                <p class="badge bg-info text-wrap fw-bold text-dark">
+                    If you saw any bug, please send to the developer! We are happy to help you!
+                </p>
+            </div>
+            <div class="modal-footer text-center d-flex justify-content-right">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
             </div>
         </div>
         
