add group leader could manually assgin next leader feature

--- a/src/app/game-room/game-room.component.css
+++ b/src/app/game-room/game-room.component.css
@@ -9,7 +9,14 @@
     /* -webkit-overflow-scrolling: touch; */
 }
 
-.dropdown-menu{
+#messageGroup{
     overflow: scroll;
     overflow-x: hidden;
+}
+
+.caret-off::before {
+    display: none;
+}
+.caret-off::after {
+    display: none;
 }
