--- a/src/app/game-room/game-room.component.html
+++ b/src/app/game-room/game-room.component.html
@@ -26,7 +26,7 @@
                         Massages 
                         <i class="fa-regular fa-comments"></i>
                     </button>
-                    <div class="dropdown-menu" style="max-height: 85vh; max-width: 58vh;">
+                    <div class="dropdown-menu" style="max-height: 85vh; max-width: 58vh;" id="messageGroup">
                         <div *ngFor="let message of messages; index as i;">
                             <div class="dropdown-item">
                                 <div *ngIf="message.type === 'system'; then system else game"></div>
@@ -58,16 +58,26 @@
                         <div class="list-group-item list-group-item-success">
                             <div class="row">
                                 <div class="col">
-                                    <div class="d-flex align-items-center">
-                                        <div *ngIf="groupName == groupLeader.groupName && 
-                                            user.name == groupLeader.name" class="p-2">
-                                            <i class="fa-solid fa-star" style="color: #b3b611;"></i>
-                                        </div>
-                                            
+                                    <div class="d-flex align-items-center justify-content-between">
+                                        <div class="d-flex align-items-center">
+                                            <div *ngIf="groupName == groupLeader.groupName && 
+                                                user.name == groupLeader.name" class="p-2">
+                                                <i class="fa-solid fa-star" style="color: #b3b611;"></i>
+                                            </div>
                                             <span class="badge bg-danger d-flex justify-content-center align-items-center">
                                                 <div>{{i + 1}}</div>
                                             </span>
                                             <h5 class="p-2">{{user.name}}</h5>
+                                        </div>
+                                        <div *ngIf="groupName == groupLeader.groupName && 
+                                            name == groupLeader.name" class="dropdown">
+                                            <button class="btn btn-outline-secondary dropdown-toggle caret-off" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <i class="fa-solid fa-ellipsis"></i>
+                                            </button>
+                                            <div class="dropdown-menu">
+                                                <div class="dropdown-item" (click)="assignNewGroupLeader(user.name)">Assign Group Leader</div>  
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="w-100"></div>
